public/javascripts/SVLabel/css/svl-context-menu.css
#context-menu-holder {
    position: relative;
    top: 0;
    left: 0;
    width: 390px;
    height: 155px;
    padding: 5px;
    background-color: white;
    border: solid 5px black;
    border-radius: 3px 3px 3px 3px;
    -webkit-border-radius: 3px 3px 3px 3px;
    -moz-border-radius: 3px 3px 3px 3px;
    visibility: hidden;
    z-index: 2;
}

#context-menu-vertical-connector {
    position: absolute;
    top: -13px;
    left: 178px;
    height: 13px;
    width: 6px;
    background-color: black;
}

#context-menu-holder hr {
    margin-top: 0;
    margin-bottom: 5px;
}

#severity-menu {
    height: 50px;
}

.context-menu-wheelchair-icons {
    cursor: default;
    width: 30px;
    height: 30px;
}

#severity-menu .radio-inline {
    font-size: 10pt;
    padding-bottom: 5px;
}

#severity-menu input[type="radio"] {
    width: 20px;
    height: 20px;
}

#severity-menu #column-not-passable, #severity-menu #column-passable {
    cursor: default;
    position: relative;
    top: 8px;
    margin-left: 0;
    padding: 5px;
    text-align: center;
}

#severity-menu .radio-inline label {
    position: relative;
    padding: 4px 0 0 0;
}

#severity-menu .radio-inline label div {
    font-weight: 600;
    left: -14px;
    position: relative;
    top: 25px;
}

#severity-radio-holder span {
    font-size: 10pt;
    padding: 0 5px 0 5px;
}

#severity-radio-holder > .radio-inline > label > input {
    visibility: hidden;
    position: absolute;
}

#severity-radio-holder > .radio-inline > label > input + img {
    cursor: pointer;
    left: -23px;
    top: 2px;
    position: absolute;
    width: 25px;
}

#context-menu-close-button-holder {
    position: absolute;
    top: 0;
    right: 5px;
}

#problem-property-menu {
    position: relative;
}

.problem-severity-axis-label{
    cursor: default;
}

#context-menu-problem-description-text-box {
    height: 30px;
    margin: 10px 5px 5px 5px;
    width: 355px;
}

#context-menu-temporary-problem-checkbox-holder {
    margin: 5px 5px 5px 5px;
}

#context-menu-temporary-problem-checkbox-holder label {
    color: #888;
    font-weight: normal;
}

#problem-property-menu button {
    background: none;
    border: none;
    color: #888;
    position: absolute;
    top: 40px;
    right: 8px;
}

